--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -31,10 +31,6 @@
     background-color: #f0f0f0;
 }
 
-.tg .tg-4eph {
-    background-color: #f9f9f9
-}
-
 .modal {
     display: none;
     position: fixed;
@@ -44,14 +40,13 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 40%; /* Could be more or less, depending on screen size */
+    width: 40%;
 }
