--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -31,6 +31,10 @@
     background-color: #f0f0f0;
 }
 
+.sort-header.active {
+    background-color: #ffd700;
+}
+
 .modal {
     display: none;
     position: fixed;
